@@ -1,88 +1,66 @@
 package com.exempal.shiftcounter.features.comment.application;
 
-import com.exempal.shiftcounter.features.comment.domain.StoppageEntry;
-import com.exempal.shiftcounter.features.shift.infrastructure.ShiftEntity;
-import com.exempal.shiftcounter.features.signal.domain.Signal;
+import com.exempal.shiftcounter.features.comment.domain.DetectionType;
+import com.exempal.shiftcounter.features.comment.domain.Stoppage;
 import com.exempal.shiftcounter.features.shift.application.ShiftTimeHelper;
+import com.exempal.shiftcounter.features.shift.domain.Shift;
+import com.exempal.shiftcounter.features.signal.domain.Signal;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.UUID;
 
 @Component
-@Slf4j
 @RequiredArgsConstructor
 public class StoppageDetector {
-
     private final ShiftTimeHelper timeHelper;
 
-    public List<StoppageEntry> detectFixedLosses(
-            ShiftEntity shift,
-            int hourIndex,
-            List<Signal> signals,
-            Duration fixedGapThreshold
-    ) {
-        List<StoppageEntry> result = new ArrayList<>();
-
-        final String label = shift.getHourlyLabels().get(hourIndex);
-        final LocalDateTime startOfHour = timeHelper.resolveStartTime(label, shift.getDate());
-        final LocalDateTime endOfHour   = timeHelper.resolveEndTime(shift.getHourlyLabels(), hourIndex, shift.getDate());
-
+    public List<Stoppage> detectFixedLosses(Shift shift, int intervalIndex, List<Signal> signals,
+                                            Duration fixedGapThreshold) {
+        long shiftId = requireShiftId(shift);
+        LocalDateTime intervalStart = timeHelper.resolveStartTime(
+                shift.getHourlyLabels().get(intervalIndex), shift.getDate());
+        LocalDateTime intervalEnd = timeHelper.resolveEndTime(
+                shift.getHourlyLabels(), intervalIndex, shift.getDate());
+        List<Stoppage> result = new ArrayList<>();
         if (signals.isEmpty()) {
-            Duration full = Duration.between(startOfHour, endOfHour);
-            if (full.compareTo(fixedGapThreshold) >= 0) {
-                StoppageEntry e = StoppageEntry.fixed(hourIndex, full, shift);
-                e.setMinuteOffset(0); // весь час — от начала
-                result.add(e);
-            }
+            addIfLongEnough(result, shiftId, intervalIndex, intervalStart,
+                    Duration.between(intervalStart, intervalEnd), fixedGapThreshold);
             return result;
         }
 
         List<Signal> sorted = new ArrayList<>(signals);
         sorted.sort(Comparator.comparing(Signal::timestamp));
-
-        // leading: от начала часа до первого сигнала
-        Duration leadingGap = Duration.between(startOfHour, sorted.get(0).timestamp());
-        if (leadingGap.compareTo(fixedGapThreshold) >= 0) {
-            StoppageEntry e = StoppageEntry.fixed(hourIndex, leadingGap, shift);
-            e.setMinuteOffset(minutesBetween(label, startOfHour.toLocalTime())); // будет 0
-            result.add(e);
+        addIfLongEnough(result, shiftId, intervalIndex, intervalStart,
+                Duration.between(intervalStart, sorted.getFirst().timestamp()), fixedGapThreshold);
+        for (int index = 1; index < sorted.size(); index++) {
+            LocalDateTime previous = sorted.get(index - 1).timestamp();
+            addIfLongEnough(result, shiftId, intervalIndex, previous,
+                    Duration.between(previous, sorted.get(index).timestamp()), fixedGapThreshold);
         }
-
-        // между сигналами
-        for (int i = 1; i < sorted.size(); i++) {
-            LocalDateTime prev = sorted.get(i - 1).timestamp();
-            LocalDateTime cur  = sorted.get(i).timestamp();
-            Duration gap = Duration.between(prev, cur);
-            if (gap.compareTo(fixedGapThreshold) >= 0) {
-                StoppageEntry e = StoppageEntry.fixed(hourIndex, gap, shift);
-                e.setMinuteOffset(minutesBetween(label, prev.toLocalTime()));
-                result.add(e);
-            }
-        }
-
-        // trailing: от последнего сигнала до конца часа
-        LocalDateTime lastTs = sorted.get(sorted.size() - 1).timestamp();
-        Duration trailingGap = Duration.between(lastTs, endOfHour);
-        if (trailingGap.compareTo(fixedGapThreshold) >= 0) {
-            StoppageEntry e = StoppageEntry.fixed(hourIndex, trailingGap, shift);
-            e.setMinuteOffset(minutesBetween(label, lastTs.toLocalTime()));
-            result.add(e);
-        }
-
+        LocalDateTime last = sorted.getLast().timestamp();
+        addIfLongEnough(result, shiftId, intervalIndex, last,
+                Duration.between(last, intervalEnd), fixedGapThreshold);
         return result;
     }
 
-    private int minutesBetween(String hourLabel, LocalTime from) {
-        // hourLabel вида "15:30"
-        LocalTime start = LocalTime.parse(hourLabel);
-        long mins = Duration.between(start, from).toMinutes();
-        return (int) Math.max(0, mins);
+    private void addIfLongEnough(List<Stoppage> target, long shiftId, int intervalIndex,
+                                 LocalDateTime startedAt, Duration duration, Duration threshold) {
+        if (duration.compareTo(threshold) >= 0) {
+            target.add(Stoppage.detected(UUID.randomUUID(), shiftId, Stoppage.PRIMARY_SENSOR,
+                    intervalIndex, startedAt, duration, 0, DetectionType.FIXED));
+        }
+    }
+
+    private long requireShiftId(Shift shift) {
+        Long id = shift.getId() != null ? shift.getId()
+                : shift.getEntity() == null ? null : shift.getEntity().getId();
+        if (id == null) throw new IllegalArgumentException("persisted shift is required");
+        return id;
     }
 }
